@@ -1,3 +1,10 @@
+2000-06-12  Dan Winship  <danw@helixcode.com>
+
+	* e-msg-composer.c (format_text): Don't break on non-breaking
+	spaces, don't keep non-breaking spaces that fall after a line
+	wrap, and translate non-breaking spaces to regular ones after
+	wrapping.
+
 2000-06-05  Dan Winship  <danw@helixcode.com>
 
 	* e-msg-composer.c (e_msg_composer_attach): New convenience
